notebooks for different deep networks to do clustering more efficiently (in parallel)

--- a/APL.ipynb
+++ b/APL.ipynb
@@ -10231,6 +10231,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# --------------------- finish ---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Clustering"
    ]
   },
@@ -10254,64 +10261,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans = KMeans(n_clusters=20)"
+    "kmeans = KMeans(n_clusters=20, max_iter=30000, random_state=2019)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KMeans(algorithm='auto', copy_x=True, init='k-means++', max_iter=300,\n",
-       "    n_clusters=20, n_init=10, n_jobs=1, precompute_distances='auto',\n",
-       "    random_state=None, tol=0.0001, verbose=0)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This step took time: 0:07:38.004382\n"
+     ]
     }
    ],
    "source": [
-    "kmeans.fit(vgg19_model_fc1_features.values)"
+    "time_start = datetime.now()\n",
+    "kmeans.fit(vgg19_model_fc1_features.values)\n",
+    "print('This step took time:', datetime.now() - time_start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "output = kmeans.predict(vgg19_model_fc1_features.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([13,  6,  1, ...,  0,  0,  0])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
    ]
   },
   {
@@ -10356,7 +10349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 130,
    "metadata": {
     "scrolled": true
    },
@@ -10374,6 +10367,45 @@
     "\n",
     "maxcount = max(len(v) for v in cluster_dict.values())\n",
     "max_clusters = [k for k, v in cluster_dict.items() if len(v) == maxcount]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32030,\n",
+       " 360,\n",
+       " 431,\n",
+       " 518,\n",
+       " 418,\n",
+       " 544,\n",
+       " 457,\n",
+       " 337,\n",
+       " 368,\n",
+       " 540,\n",
+       " 326,\n",
+       " 270,\n",
+       " 408,\n",
+       " 508,\n",
+       " 344,\n",
+       " 492,\n",
+       " 325,\n",
+       " 541,\n",
+       " 356,\n",
+       " 427]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[len(cluster_dict[key]) for key in cluster_dict]"
    ]
   },
   {
@@ -10935,6 +10967,26 @@
    "outputs": [],
    "source": [
     "kmeans = KMeans(n_clusters=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40000, 2048)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resnet_model_avg_pool_features.values.shape"
    ]
   },
   {
