--- a/VGG19_Clustering.ipynb
+++ b/VGG19_Clustering.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -1587,7 +1587,7 @@
        "[74 rows x 14 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,14 +1596,14 @@
     "lfdp_ground_labels = pd.read_csv(\"LFDP_ground_labels.csv\")\n",
     "lfdp_ground_labels = lfdp_ground_labels.drop('Unnamed: 0', axis=1)\n",
     "\n",
-    "lfdp_palm = lfdp_ground_labels.loc[lfdp_ground_labels['SPECIES'] == 'PREMON']\n",
+    "lfdp_palm = lfdp_ground_labels.loc[(lfdp_ground_labels['SPECIES'] == 'PREMON') & (lfdp_ground_labels['ALIVE'] == 'A')]\n",
     "lfdp_palm = lfdp_palm[lfdp_palm['DIAM'] >= 20]\n",
     "lfdp_palm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1612,25 +1612,25 @@
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {16: 0.003492745835572273,\n",
+       "            {10: 0.0007902015013828526,\n",
+       "             16: 0.0021493820526598604,\n",
+       "             14: 0.005653266331658292,\n",
+       "             6: 0.001379310344827586,\n",
        "             5: 0.002005347593582888,\n",
-       "             14: 0.0037688442211055275,\n",
-       "             19: 0.002956194571351787,\n",
-       "             6: 0.003103448275862069,\n",
-       "             10: 0.001185302252074279,\n",
-       "             7: 0.0016025641025641025,\n",
-       "             3: 0.00198300283286119,\n",
-       "             17: 0.00031746031746031746,\n",
-       "             8: 0.0019392372333548805,\n",
-       "             18: 0.001483679525222552,\n",
-       "             1: 0.0011037527593818985,\n",
-       "             0: 0.0008347245409015025,\n",
-       "             4: 0.0027675276752767526,\n",
-       "             2: 0.0010204081632653062,\n",
-       "             13: 0.0005117707267144319})"
+       "             12: 0.0010030090270812437,\n",
+       "             4: 0.0018450184501845018,\n",
+       "             18: 0.0008902077151335311,\n",
+       "             1: 0.006622516556291391,\n",
+       "             2: 0.0020408163265306124,\n",
+       "             11: 0.0136986301369863,\n",
+       "             19: 0.0018812147272238647,\n",
+       "             17: 0.0012698412698412698,\n",
+       "             3: 0.0022662889518413596,\n",
+       "             0: 0.0012520868113522537,\n",
+       "             8: 0.0019392372333548805})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,18 +1642,205 @@
     "#palm_relvance = dict\n",
     "\n",
     "for index, entry in lfdp_palm.iterrows():\n",
+    "    patch_y = entry['pix_1'] // 100\n",
+    "    patch_x = entry['pix_2'] // 100 \n",
     "    \n",
-    "    ### FIX THIS\n",
-    "    patch_y = entry['pix_1']%100\n",
-    "    patch_x = int(entry['pix_2']/100)\n",
-    "    \n",
-    "    patches_i = patch_x*100 + patch_y\n",
+    "    patches_i = patch_x*200 + patch_y\n",
     "    palm_relevance[output[patches_i]] += 1\n",
     "    \n",
     "for cluster_i in palm_relevance:\n",
     "    palm_relevance[cluster_i] /= len(cluster_dict[cluster_i])\n",
     "    \n",
     "palm_relevance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11719,\n",
+       " 2547,\n",
+       " 8033,\n",
+       " 6471,\n",
+       " 2606,\n",
+       " 11614,\n",
+       " 10773,\n",
+       " 4532,\n",
+       " 11996,\n",
+       " 9596,\n",
+       " 9168,\n",
+       " 9034,\n",
+       " 9457,\n",
+       " 10119,\n",
+       " 9814,\n",
+       " 8889,\n",
+       " 3456,\n",
+       " 10220,\n",
+       " 10263,\n",
+       " 10700,\n",
+       " 10396,\n",
+       " 8895,\n",
+       " 7773,\n",
+       " 6424,\n",
+       " 5707,\n",
+       " 3119,\n",
+       " 10260,\n",
+       " 10073,\n",
+       " 9579,\n",
+       " 9370,\n",
+       " 7419,\n",
+       " 6765,\n",
+       " 6815,\n",
+       " 5361,\n",
+       " 15933,\n",
+       " 14616,\n",
+       " 9765,\n",
+       " 13075,\n",
+       " 14457,\n",
+       " 13087,\n",
+       " 12877,\n",
+       " 9632,\n",
+       " 9519,\n",
+       " 8803,\n",
+       " 8469,\n",
+       " 8302,\n",
+       " 7741,\n",
+       " 12472,\n",
+       " 9686,\n",
+       " 9960,\n",
+       " 9794,\n",
+       " 8862,\n",
+       " 8569,\n",
+       " 8033,\n",
+       " 8210,\n",
+       " 9772,\n",
+       " 9724,\n",
+       " 9632,\n",
+       " 9213,\n",
+       " 8163,\n",
+       " 8051,\n",
+       " 12161,\n",
+       " 10606,\n",
+       " 5461,\n",
+       " 5934,\n",
+       " 9980,\n",
+       " 6175,\n",
+       " 5789,\n",
+       " 5704,\n",
+       " 5471,\n",
+       " 5692,\n",
+       " 5080,\n",
+       " 4705,\n",
+       " 2934]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lfdp_palm['pix_2'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_palm = np.zeros(20)\n",
+    "\n",
+    "for i in range(lfdp_palm.shape[0]):\n",
+    "    loc_1 = lfdp_palm['pix_2'].tolist()[i] // 100\n",
+    "    loc_2 = lfdp_palm['pix_1'].tolist()[i] // 100\n",
+    "    location = loc_1 * 200 + loc_2\n",
+    "   \n",
+    "    lab = int(output[location])\n",
+    "    num_palm[lab] += 1\n",
+    "    \n",
+    "## size of each cluster in the area with labels\n",
+    "size_cluster = np.zeros(20)\n",
+    "for i in range(len(output)):\n",
+    "    clst = output[i]\n",
+    "    size_cluster[clst] += 1\n",
+    "ratio_palm = num_palm / (size_cluster + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00125156, 0.00661521, 0.00203978, 0.00226565, 0.00184332,\n",
+       "       0.00200468, 0.00137883, 0.        , 0.00193798, 0.        ,\n",
+       "       0.00078989, 0.01365188, 0.001002  , 0.        , 0.00564972,\n",
+       "       0.        , 0.0021488 , 0.00126944, 0.00088994, 0.00188071])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratio_palm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_palm = np.zeros(20)\n",
+    "\n",
+    "for i in range(lfdp_palm.shape[0]):\n",
+    "    loc_1 = lfdp_palm['pix_2'].tolist()[i] // 100\n",
+    "    loc_2 = lfdp_palm['pix_1'].tolist()[i] // 100\n",
+    "    location = loc_1 * 200 + loc_2\n",
+    "   \n",
+    "    lab = int(output[location])\n",
+    "    num_palm[lab] += 1\n",
+    "    \n",
+    "## size of each cluster in the area with labels\n",
+    "size_cluster = np.zeros(20)\n",
+    "for i in range(len(output)):\n",
+    "    clst = output[i]\n",
+    "    size_cluster[clst] += 1\n",
+    "ratio_palm = num_palm / (size_cluster + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00125156, 0.00661521, 0.00203978, 0.00226565, 0.00184332,\n",
+       "       0.00200468, 0.00137883, 0.        , 0.00193798, 0.        ,\n",
+       "       0.00078989, 0.01365188, 0.001002  , 0.        , 0.00564972,\n",
+       "       0.        , 0.0021488 , 0.00126944, 0.00088994, 0.00188071])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratio_palm"
    ]
   },
   {
