--- a/VGG19_Clustering.ipynb
+++ b/VGG19_Clustering.ipynb
@@ -324,7 +324,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identifying Palm Clusters"
+    "## Identifying Palm Clusters\n",
+    "In this csv file, each row represents a ground observation. And the feature “pix_1” corresponds the column in the image, and “pix_2” corresponds to the row in the image. For example, the first data point has value pix_1 = 8132, pix_2 = 16017, which means its location is 16017th row, and 8132nd column in the image."
    ]
   },
   {
