--- a/Feature_Creation.ipynb
+++ b/Feature_Creation.ipynb
@@ -123,60 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### One way to get patches, doesn't preserve order? Skip for now"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction import image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda\\lib\\site-packages\\sklearn\\feature_extraction\\image.py:287: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  indexing_strides = arr[slices].strides\n"
-     ]
-    }
-   ],
-   "source": [
-    "patches = image.extract_patches_2d(img, (100, 100), max_patches= 40000) #img is too large"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?image.extract_patches_2d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Alternatively, get patches by matrix slicing, preserves order"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from itertools import product\n",
-    "# patches0 = [img[i*100:(i+1)*100,j*100:(j+1)*100] for i, j in product(range(int(img.shape[0]/100)), range(int(img.shape[1]/100)))]"
+    "### Get patches by matrix slicing, preserves order"
    ]
   },
   {
@@ -236,72 +183,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "patches = [cv2.resize(img[i*100:(i+1)*100,j*100:(j+1)*100], (229, 229)) for i, j in product(range(int(img.shape[0]/100)), range(int(img.shape[1]/100)))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "patches = [cv2.resize(img[i*100:(i+1)*100,j*100:(j+1)*100], (299, 299)) for i, j in product(range(int(img.shape[0]/100)), range(int(img.shape[1]/100)))]\n",
     "patches = np.asarray(patches)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#WRONG, this is just padding zeros (numpy's resize function) - we should be using cv2's resize function to alter the resolution\n",
-    "#patches.resize(40000, 224, 224, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(40000, 224, 224, 3)"
+       "(40000, 299, 299, 3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "patches.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### other, just to test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# just to test\n",
-    "i=0\n",
-    "for patch in patches:\n",
-    "    cv2.imshow('patch' + str(i), patch)\n",
-    "    cv2.waitKey(0)\n",
-    "    cv2.destroyAllWindows()\n",
-    "    i += 1"
    ]
   },
   {
@@ -3046,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
