--- a/Feature_Creation.ipynb
+++ b/Feature_Creation.ipynb
@@ -1,19 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Read image and cut into 100 px x 100 px patches"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import cv2\n",
+    "import csv\n",
+    "from itertools import product\n",
+    "\n",
+    "import keras\n",
+    "from keras.applications import vgg19, vgg16, inception_v3, resnet50\n",
+    "from keras.models import Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read image and cut into 100 px x 100 px patches"
    ]
   },
   {
@@ -123,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get patches by matrix slicing, preserves order"
+    "## Get patches by matrix slicing, preserves order"
    ]
   },
   {
@@ -131,7 +140,7 @@
    "metadata": {},
    "source": [
     "note that you need to resize patches to feed into pretrained deep network, \n",
-    "#### this is for vgg and resnet models"
+    "### this is for vgg and resnet models"
    ]
   },
   {
@@ -140,17 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import product\n",
-    "patches = [cv2.resize(img[i*100:(i+1)*100,j*100:(j+1)*100], (224, 224)) for i, j in product(range(int(img.shape[0]/100)), range(int(img.shape[1]/100)))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
+    "patches = [cv2.resize(img[i*100:(i+1)*100,j*100:(j+1)*100], (224, 224)) for i, j in product(range(int(img.shape[0]/100)), range(int(img.shape[1]/100)))]\n",
     "patches = np.asarray(patches)"
    ]
   },
@@ -178,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### on the other hand this is for inception model***"
+    "### on the other hand this is for inception model***"
    ]
   },
   {
@@ -236,10 +235,6 @@
     }
    ],
    "source": [
-    "import keras\n",
-    "from keras.applications import vgg19, vgg16, inception_v3, resnet50\n",
-    "from keras.models import Model\n",
-    "\n",
     "#Load the VGG19 model\n",
     "vgg19_model = vgg19.VGG19(weights='imagenet')#include_top=True, weights='imagenet')#, input_shape=(100, 100, 3))\n",
     "vgg19_model_fc1 = Model(inputs=vgg19_model.input, outputs=vgg19_model.get_layer('fc1').output)\n",
@@ -263,15 +258,6 @@
    "metadata": {},
    "source": [
     "## VGG19"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv"
    ]
   },
   {
@@ -710,8 +696,6 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "vgg19_model_fc1_features = pd.read_csv('vgg19_model_fc1_features.csv', sep=',', header=None)\n",
     "\n",
     "vgg19_model_fc1_features"
