--- a/InceptionV3_Clustering.ipynb
+++ b/InceptionV3_Clustering.ipynb
@@ -16,7 +16,8 @@
     "from datetime import datetime\n",
     "\n",
     "import cv2\n",
-    "impor"
+    "from itertools import product\n",
+    "import random"
    ]
   },
   {
@@ -404,9 +405,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "from itertools import product\n",
-    "\n",
     "# need to actually get the patches again, so that we can pick the correct patches and stitch them up to create our visualization\n",
     "img = cv2.imread(\"shadow_remove.jpg\")\n",
     "patches = [img[i*100:(i+1)*100,j*100:(j+1)*100] for i, j in product(range(int(img.shape[0]/100)), range(int(img.shape[1]/100)))]\n",
@@ -430,8 +428,6 @@
     }
    ],
    "source": [
-    "import random\n",
-    "\n",
     "fig = plt.figure(figsize=(12,12)) \n",
     "\n",
     "subplot_i = 1\n",
